--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
