разрешение конфликта докера

--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,7 +1,8 @@
-FROM node:16-alpine
+FROM node:18-alpine
 RUN apk add --no-cache postgresql-client
 WORKDIR /app
 COPY package*.json ./
+# COPY yarn.lock ./
 RUN npm install
 COPY . .
 EXPOSE 3001
