--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -8,6 +8,9 @@
     "jsonwebtoken": "^9.0.0",
     "node-fetch": "^2.6.7",
     "pg": "^8.11.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "cors": "^2.8.5"
   }
 }
